# ChangeLog for dev-perl/Config-ApacheFormat
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-ApacheFormat/ChangeLog,v 1.13 2007/01/15 15:10:00 mcummings Exp $

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Config-ApacheFormat-1.2.ebuild:
  Ebuild maintenance

  10 Dec 2006; Yuval Yaari <yuval@gentoo.org>
  Config-ApacheFormat-1.2.ebuild:
  Changed perl-core/Text-Balanced to virtual/perl-Text-Balanced (bug #157686)

  07 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Config-ApacheFormat-1.2.ebuild:
  Marking amd64 stable

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Config-ApacheFormat-1.2.ebuild:
  Adding perl dep; fixed DEPEND

  04 Jul 2006; Christian Hartmann <ian@gentoo.org>
  Config-ApacheFormat-1.2.ebuild:
  Fixed RDEPEND wrt bug #134781; fixed DEPEND

  28 May 2006; Bryan Østergaard <kloeri@gentoo.org>
  Config-ApacheFormat-1.2.ebuild:
  Stable on alpha.

  28 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  Config-ApacheFormat-1.2.ebuild:
  Mark 1.2 stable on ia64

  23 Mar 2006; Michael Cummings <mcummings@gentoo.org>
  Config-ApacheFormat-1.2.ebuild:
  Unmasking sparc and x86

  13 Feb 2006; <mcumming@gentoo.org> Config-ApacheFormat-1.2.ebuild:
  Virtual for perl-core dep

  25 Aug 2005; Aron Griffis <agriffis@gentoo.org>
  Config-ApacheFormat-1.2.ebuild:
  add ~ia64

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  Config-ApacheFormat-1.2.ebuild:
  dev-perl/Text-Balanced => perl-core/Text-Balanced migration

  25 May 2005; Michael Cummings <mcummings@gentoo.org>
  Config-ApacheFormat-1.2.ebuild:
  dev-perl/File-Spec => perl-core/File-Spec migration

*Config-ApacheFormat-1.2 (19 Mar 2005)

  19 Mar 2005; Michael Cummings <mcummings@gentoo.org> +metadata.xml,
  +Config-ApacheFormat-1.2.ebuild:
  Bug 79477, support for bug 79476, ebuild provided by Kevin
  <gentoo@thebarters.com>
