@@ -1,24 +1,21 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-ApacheFormat/Config-ApacheFormat-1.2.ebuild,v 1.13 2007/01/15 15:10:00 mcummings Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-ApacheFormat/Config-ApacheFormat-1.2.ebuild,v 1.14 2010/01/29 07:47:10 tove Exp $
 
+EAPI=2
+
+MODULE_AUTHOR=SAMTREGAR
 inherit perl-module
-MY_PV=${PV/0/}
-MY_P=${PN}-${MY_PV}
-IUSE=""
 
-S=${WORKDIR}/${MY_P}
 DESCRIPTION="use Apache format config files"
-SRC_URI="mirror://cpan/authors/id/S/SA/SAMTREGAR/${MY_P}.tar.gz"
-HOMEPAGE="http://search.cpan.org/~samtregar/"
 
 SLOT="0"
-LICENSE="Artistic"
 KEYWORDS="alpha amd64 ia64 ~ppc sparc x86"
+IUSE=""
+
+RDEPEND="dev-perl/Class-MethodMaker
+		virtual/perl-Text-Balanced
+		virtual/perl-File-Spec"
+DEPEND="${RDEPEND}"
 
 SRC_TEST="do"
-
-DEPEND="dev-perl/Class-MethodMaker
-		virtual/perl-Text-Balanced
-		virtual/perl-File-Spec
-		dev-lang/perl"
