@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Config-ApacheFormat
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-ApacheFormat/ChangeLog,v 1.13 2007/01/15 15:10:00 mcummings Exp $
+# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Config-ApacheFormat/ChangeLog,v 1.14 2010/01/29 07:47:10 tove Exp $
+
+  29 Jan 2010; Torsten Veller <tove@gentoo.org>
+  Config-ApacheFormat-1.2.ebuild:
+  Fix LICENSE: same terms as perl (#301969). Maintenance
 
   15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   Config-ApacheFormat-1.2.ebuild:
